[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://HUD/dark_theme.tres" type="StyleBox" id=2]
[ext_resource path="res://HUD/key_icon.png" type="Texture" id=3]
[ext_resource path="res://Fonts/interface_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://HUD/time_icon.png" type="Texture" id=5]
[ext_resource path="res://HUD/prisoner_icon.png" type="Texture" id=6]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
margin_bottom = 20.0
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_right = 320.0
margin_bottom = 26.0

[node name="ExtraSpace" type="Control" parent="PanelContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 1.0
rect_min_size = Vector2( 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 5.0
margin_right = 320.0
margin_bottom = 21.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/CenterContainer"]
margin_left = 51.0
margin_right = 269.0
margin_bottom = 16.0
custom_constants/separation = 40

[node name="KeysCollected" type="HBoxContainer" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 16.0

[node name="KeyIcon" type="TextureRect" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer/KeysCollected"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="KeyCounter" type="Label" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer/KeysCollected"]
margin_left = 20.0
margin_top = 3.0
margin_right = 44.0
margin_bottom = 13.0
rect_min_size = Vector2( 24, 10 )
custom_fonts/font = ExtResource( 4 )
text = "x 00"

[node name="TimeCounter" type="HBoxContainer" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 132.0
margin_bottom = 16.0

[node name="TimeIcon" type="TextureRect" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer/TimeCounter"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="TimeLeft" type="Label" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer/TimeCounter"]
margin_left = 20.0
margin_top = 3.0
margin_right = 48.0
margin_bottom = 13.0
rect_min_size = Vector2( 28, 10 )
custom_fonts/font = ExtResource( 4 )
text = "9999"

[node name="PrisonersCounter" type="HBoxContainer" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 172.0
margin_right = 218.0
margin_bottom = 16.0

[node name="PrisonerIcon" type="TextureRect" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer/PrisonersCounter"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 6 )

[node name="PrisonersLeft" type="Label" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer/PrisonersCounter"]
margin_left = 20.0
margin_top = 3.0
margin_right = 46.0
margin_bottom = 13.0
rect_min_size = Vector2( 26, 10 )
custom_fonts/font = ExtResource( 4 )
text = " x 00"

[node name="ColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 320.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 1 )
